<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="360dp"
    android:layout_height="180dp"
    android:background="@color/background_color"
    android:padding="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/trending_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/trendingImage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="21dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/image_movie">

        <TextView
            android:id="@+id/name_movie"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/movie_name"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_movie"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_produce"
            android:maxLines="1"
            android:textColor="@color/gray_color"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/image_movie">

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star"
                android:src="@drawable/trending_star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star"
                android:src="@drawable/trending_star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star"
                android:src="@drawable/trending_star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star"
                android:src="@drawable/trending_star" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star"
                android:src="@drawable/trending_star" />
        </LinearLayout>

        <TextView
            android:id="@+id/watched_movie"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/movie_users"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>