<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".ui.view.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/top_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="21dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="#00000000"
                app:layout_constraintBottom_toBottomOf="@id/top_container"
                app:layout_constraintRight_toLeftOf="@+id/title_container"
                app:layout_constraintStart_toStartOf="@id/top_container"
                app:layout_constraintTop_toTopOf="@id/top_container"
                app:shapeAppearanceOverlay="@style/circleImage"
                app:srcCompat="@drawable/wallpaper_profile"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:id="@+id/title_container"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="12dp"
                app:layout_constraintBottom_toBottomOf="@id/top_container"
                app:layout_constraintEnd_toStartOf="@+id/icon_search"
                app:layout_constraintStart_toEndOf="@id/profile"
                app:layout_constraintTop_toTopOf="@id/top_container"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="TextSizeCheck,VisualLintBounds" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:paddingStart="13dp"
                    android:text="@string/cigrcham"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold|italic"
                    tools:ignore="RtlSymmetry,TextSizeCheck,VisualLintBounds" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/icon_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="21dp"
                android:background="@color/top_color"
                android:contentDescription="@string/search"
                android:scaleType="fitCenter"
                android:src="@drawable/search"
                app:layout_constraintBottom_toBottomOf="@id/top_container"
                app:layout_constraintEnd_toStartOf="@+id/icon_notification"
                app:layout_constraintStart_toEndOf="@id/title_container"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

            <ImageButton
                android:id="@+id/icon_notification"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@color/top_color"
                android:contentDescription="@string/notification"
                android:scaleType="fitCenter"
                android:src="@drawable/notification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/top_container"
                app:layout_constraintStart_toEndOf="@id/icon_search"
                app:layout_constraintTop_toTopOf="@id/top_container"
                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck,ImageContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbarDefaultDelayBeforeFade="50"
            android:scrollbarFadeDuration="10"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Trending-->
                <LinearLayout
                    android:id="@+id/trending_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/txt_Trending"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/trending"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/trending_recycleView"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginTop="6dp"
                        android:background="@color/top_color" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/popular_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/trending_container">

                    <TextView
                        android:id="@+id/txt_ForYou"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/for_you"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/for_you_recycle"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@color/top_color" />
                </LinearLayout>

                <!-- For You-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/category_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/background_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popular_container" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/category_list_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@color/top_color"
                    android:scrollbarDefaultDelayBeforeFade="1"
                    android:scrollbarFadeDuration="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/category_recycler" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@id/shimmer_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_container">

            <include layout="@layout/shimmer_layout_home" />
        </com.facebook.shimmer.ShimmerFrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>